# python-fake-couchbase

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg
fake_couchbase/: __init__.py  _datetime_hack.py  bucket.py  cluster.py  collection.py  scope.py  session.py  store.py
