[metadata]
name = fake-couchbase
version = attr: fake_couchbase.__version__
description = Simple fake Couchbase client for Python 3.8+
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas 'sitzz' Vang
author_email = sitzzdk@gmail.com
url = https://github.com/sitzz/python-fake-couchbase
license = BSD-3
keywords =
    couchbase
    cbase
    cb
    fake
    test
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = false
include_package_data = true
packages =
    fake_couchbase
python_requires = >=3.8
install_requires =
    couchbase>=4.0.0
